--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
-h1 {
-  color: blue;
+body {
+    padding: 0;
+    background-image: url('img/bg.jpg'); 
+    background-position: left;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-color: black;
+    height: 100vh;
+    justify-content: left;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    font-family: 'Rubik', sans-serif;
+    font-weight: lighter;
+    overflow: hidden;
 }
